--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^0.27.2",
     "bignumber.js": "^9.1.0",
+    "ethers": "^5.7.1",
     "react": "^18.0.0",
     "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.0.0",
